--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="shortcut icon" href="https://i.imgur.com/R4YNDY5.jpg" type="image/x-icon">
-    <title>THANHDIEU | HOME</title>
+    <title>MINHQUAN | HOME</title>
      <link rel="stylesheet" href="_thanhdieu.css" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
      <link rel="stylesheet" href="index.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <meta name="author" content="Đây Là Website Của ThanhDieu-Dev, Rất Mong Được Chào Đón Bạn !">
-    <meta property="og:title" content="HELLO TA CHI HẢO - THIS IS THANHDIEUTV !">
+    <meta name="author" content="Đây Là Website Của MQUANCUTO-Dev, Rất Mong Được Chào Đón Bạn !">
+    <meta property="og:title" content="HELLO TA CHI HẢO - THIS IS MINHQUANCUTO !">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://thanhdieu.com/">
+    <meta property="og:url" content="http://MINHQUANDZ.COM/">
     <meta property="og:image" content="http://thanhdieu.com/files/thanhdieugirl.jpg">
     <meta property="og:image:width" content="120">
     <meta property="og:image:height" content="120">
@@ -33,7 +33,7 @@
     <p align="center">
     <img  class="Blob" src="https://img.win3000.com/m00/48/02/085e1a8c2dec126cfd3ec0b17994bbec.jpg" width="96" height="96" alpha="@ThanhDieu@"></p>
     <h2 class="NameFtThanhDieu" align="center">
-    VUONG THANH DIEU <i class="fa fa-check-circle"></i></h2> 
+    PHAN NGUYEN MINH QUAN <i class="fa fa-check-circle"></i></h2> 
     <h2 class="TieuSu">
     Hey brother, I'm a Developer.<br>I like website design :)</h2>
     <br><hr class="New"><br>
@@ -41,21 +41,11 @@
     <h2 class="NameFtThanhDieu">
     Contact Social
     </h2>
-    <ul class="icons">
-    <br>
-    <div class="MangXaHoiFtThanhDieu">
-    <a id="Youtube" onClick="Youtube()">
-    <div class="Youtube">YouTube</div></a>
+    <ul class="icons"r
     <br>
     <a id="Facebook" onClick="Facebook()">
     <div class="Facebook">Facebook</div>
     </a>
-    <br>
-    <a id="Discord" onClick="Discord()">
-    <div class="Discord">Discord</div></a>
-    <br>
-    <a id="Telegram" onClick="Telegram()">
-    <div class="Telegram">Telegram</div></a>
     <br>
    </div>
     <br><hr class="New"><br>
